gl31-master/src/test/deca/syntax/valid/sansobjet/sum_expr.deca
// Description:
//    tests de programme correct syntaxiquement pour sans-objet
//
// Resultats:
//    Succes attendu
//
// Historique:
//    cree le 12/01/2021
{
    int a = 3;
    int b = a + 2;
    int c = b - 4;
}
