gl31-master/src/test/deca/syntax/invalid/sansobjet/comm_mono.deca
// Description:
//    tests de programme incorrect lexicalement pour hello-world
//
// Resultats:
//    Ligne 11 : Erreur, commentaire monoligne depasse
//
// Historique:
//    cree le 07/01/2021

//Commentaire
monoligne